# clean-pii-sti

./: .gitignore  Dockerfile  Instructions.md  README.md  app.py  appv2.py  clean_images.py  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  x-ray-images.txt  yolo11m_config.yaml
.github/workflows/: lint.yml
clean/: clean.py
datasets/: dataset_yolo_format.py
inference/: inference_yolo_models.py
train/: train_neg_model.py  train_yolo_models.py
